<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentSignUp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:fontFamily="@font/baloo"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="98dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/image_sign_in"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sign_in_email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_sign_in_email"
            style="@style/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sign_in_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_sign_in_password"
            style="@style/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/forgot_password"
        android:fontFamily="@font/baloo_bhai_2"
        android:textColor="@color/black"
        android:layout_marginTop="26dp"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="208dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/sign_in"
        android:layout_marginTop="34dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/do_not_have_an_account"
            android:fontFamily="@font/baloo_bhai_2"
            android:textColor="@color/black"
            android:layout_marginEnd="3dp"/>
        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:fontFamily="@font/baloo_bhai_2"
            android:textColor="@color/grey"/>
    </LinearLayout>

</LinearLayout>