<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentRecoveryPassword"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/text_recovery_1"
        android:fontFamily="@font/baloo_bhai_2"
        android:textSize="18sp"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sign_in_email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_recovery_password_email"
            style="@style/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send_code"
        android:layout_width="208dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/send_code"
        android:layout_marginTop="10dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_rp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_the_sign_in"
        android:fontFamily="@font/baloo_bhai_2"
        android:layout_marginTop="30dp"
        android:textSize="16sp"/>
</LinearLayout>