<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentMain"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_main"
            android:layout_width="380dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:foreground="@drawable/black_border"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/welcome_text_1"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/baloo"
                        android:text="@string/hello"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/welcome_text_2"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/baloo_bhai_2"
                        android:text="@string/count_tasks"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_profile_photo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/image_profile"
                    app:shapeAppearanceOverlay="@style/circular" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai_2"
            android:text="@string/progress"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="39dp"
            android:layout_margin="10dp"
            android:foreground="@drawable/black_border"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="327dp"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:layout_height="wrap_content"
                    android:padding="16dp" />

                <TextView
                    android:id="@+id/progress_in_procent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:textSize="16sp"
                    android:text="@string/progress_digit"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai_2"
            android:text="@string/today_tasks"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/baloo"
            android:foreground="@drawable/black_border"
            android:textColor="@color/black"
            app:cardCornerRadius="25dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_view_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:scrollbars="horizontal"
                android:fontFamily="@font/baloo"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:textColor="@color/black"
                tools:listitem="@layout/item_recycler_view" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="ger"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:src="@drawable/ic_add"/>
</RelativeLayout>